[project]
name = "overlayframenumber"
description = "A ComfyUI custom node to overlay frame numbers on images (e.g., from VAE Decode) with customizable prefix, zero-padding, font, position, and text outline."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#    "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["Pillow>=9.0.0", "fontconfig; platform_system == \"Linux\""]

[project.urls]
Repository = "https://github.com/casc1701/ComfyUI_OverlayFrameNumber"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/casc1701/ComfyUI_OverlayFrameNumber/wiki"
"Bug Tracker" = "https://github.com/casc1701/ComfyUI_OverlayFrameNumber/issues"

[tool.comfy]
PublisherId = "casc1701"
DisplayName = "ComfyUI_OverlayFrameNumber"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility





